--- a/rent_cd.html
+++ b/rent_cd.html
@@ -12,7 +12,7 @@
 
         genresCell =
         {
-            header:"Genre",
+            header:"Genres",
             body:{
                 container:"listGenre",
                 type:"space",
